# news-api

./: .dockerignore  .env.example  Dockerfile  LICENSE  docker-compose.yml  flake.nix  pyproject.toml  shell.nix
alembic/: env.py
alembic/versions/: 20260220_add_user_sessions_table.py  20260220_fix_comment_media.py  20260220_user_email_nullable.py  20260220_user_name_nullable.py  2b4d5e0385e4_final_schema.py  2f92e61e64f0_add_deleted_user.py  31a6ea853698_add_search_device_like.py
app/: config.py  dependencies.py  main.py
app/admin/: settings.py  views.py
app/db/: session.py
app/middleware/: request_time.py
app/models/: __init__.py  base.py  category.py  comments.py  media.py  post.py  post_media.py  post_tag.py  profession.py  tags.py  users.py  usersession.py
app/routers/: __init__.py  bauth.py  news.py  users.py  weather.py
app/routers/auth/: __init__.py  basic.py  gwt.py  register.py  router.py  session.py
app/schemas/: auth.py  bauth.py  news.py  user.py  weather.py
app/services/: __init__.py  utils.py  weather.py
